--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,23 @@
     font-family: "Dana", sans-serif;
   }
 
+  /* width */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: var(--background);
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--border));
+    border-radius: 5px;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
