✨ add select file and send to server add all products on database

--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .rtl {
+    direction: rtl;
+  }
+  .ltr {
+    direction: ltr;
+  }
+}
